<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
            android:id="@+id/nav_group_top"
            android:checkableBehavior="single">

        <item
                android:id="@+id/nav_folders"
                android:checkable="false"
                android:icon="@drawable/ic_menu_folders"
                android:title="@string/nav_folders"/>
        <!--
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="Gallery"/>
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="Slideshow"/>
        -->
        <item
                android:id="@+id/nav_settings"
                android:checkable="false"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/nav_settings"/>
    </group>

    <group
            android:id="@+id/nav_group_bottom"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_exit"
                android:checkable="false"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/nav_exit"/>
    </group>

    <group
            android:id="@+id/nav_group_playlist"
            android:visible="false"
            android:checkableBehavior="single">
    </group>

    <!--
        <item android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share"/>
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send"/>
            </menu>
        </item>
    -->
</menu>
